WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313730
ANGLE: Metal: BaseInstanceOverflowTest.BaseInstanceOverflow fails validation
https://bugs.webkit.org/show_bug.cgi?id=313730
Summary
ANGLE: Metal: BaseInstanceOverflowTest.BaseInstanceOverflow fails validation
Kimmo Kinnunen
Reported
2026-04-30 03:13:24 PDT
ANGLE: Metal: BaseInstanceOverflowTest.BaseInstanceOverflow fails validation
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-30 03:13:31 PDT
<
rdar://problem/175929622
>
Kimmo Kinnunen
Comment 2
2026-04-30 03:37:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63964
EWS
Comment 3
2026-05-04 00:50:23 PDT
Committed
312507@main
(d4aae9fc6b34): <
https://commits.webkit.org/312507@main
> Reviewed commits have been landed. Closing PR #63964 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug