Cherry-pick d4aae9fc6b34. rdar://179651725

ANGLE: Metal: BaseInstanceOverflowTest.BaseInstanceOverflow fails validation
    https://bugs.webkit.org/show_bug.cgi?id=313730
    rdar://175929622

    Reviewed by Dan Glastonbury.

    Metal backend uses the instanced draw commands of Metal directly, passing
    baseInstance and count without any emulation.
    The language semantics differ:
    MSL:  uint instance_id = baseInstance + instance
    GLSL: GLuint gl_Instance = instance

    Fix the BaseInstanceOverflowTest.BaseInstanceOverflow to not fail
    by adding a backend-specific limitation to disallowing such big
    baseInstanstance + primcount calls.

    * Source/ThirdParty/ANGLE/src/libANGLE/Caps.h:
    * Source/ThirdParty/ANGLE/src/libANGLE/ErrorStrings.h:
    * Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/DisplayMtl.mm:
    (rx::DisplayMtl::ensureCapsInitialized const):
    * Source/ThirdParty/ANGLE/src/libANGLE/validationES.cpp:
    (gl::ValidateDrawElementsInstancedBase):
    (gl::ValidateDrawArraysInstancedBase):
    * Source/ThirdParty/ANGLE/src/libANGLE/validationES.h:
    (gl::ValidateDrawInstancedCounts):
    * Source/ThirdParty/ANGLE/src/tests/gl_tests/BaseInstanceOverflowTest.cpp:
    (TEST_P):
    * Source/ThirdParty/ANGLE/src/tests/test_utils/ANGLETest.h:
    (ANGLETestBase::isMetalRenderer const):

    Canonical link: https://commits.webkit.org/312507@main

Identifier: 305413.959@safari-7624.4-branch