Source/ThirdParty/ANGLE/src/libANGLE/Caps.h
@@ -157,6 +157,10 @@ struct Limitations
     // D3D does not support compressed textures where the base mip level is not a multiple of 4
     bool compressedBaseMipLevelMultipleOfFour = false;
 
+    // True if the underlying API uses `base instance + instance` as its native
+    // instance id representation.
+    bool instanceIdMayOverflow = false;
+
     // An extra limit for WebGL texture size. Ignored if 0.
     GLint webGLTextureSizeLimit = 0;
 
